compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteValWithAccessor.kt
// FIR_IDENTICAL
package c

val i : String get() =<!SYNTAX!><!>